--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -5,7 +5,7 @@
 
 @use '@/app/home/landing-page';
 @use '@/app/repos/repo-page';
-
+@use '@/components/Info/Info';
 /// Remove overrides once Carbon bugs are fixed upstream.
 /// Need grid option to not add page gutters at large viewports, to also use when nesting grids
 /// @link https://github.com/carbon-design-system/carbon/issues/2792
@@ -21,7 +21,7 @@
 .cds--content {
   margin-top: 3rem;
   padding: 0;
-//  background: var(--cds-background);
+  //  background: var(--cds-background);
 }
 
 .cds--content .cds--css-grid {
